ODP-5112: Fix ParquetReader to use Collections.unmodifiableList and update tests to replace getFirst() with get(0) for JDK compatibility